--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141123+emacs-pretest-24.0.05-13583-gb1d07e3-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 23 Nov 2014 01:55:44 -0800
+
 emacs-snapshot (2:20141120+emacs-pretest-24.0.05-13550-ge7e9dbc-1) unstable; urgency=medium
 
   * New snapshot
