--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141207+emacs-pretest-24.0.05-13837-g2b53560-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 07 Dec 2014 01:55:40 -0800
+
 emacs-snapshot (2:20141130+emacs-pretest-24.0.05-13736-g3517da7-1) unstable; urgency=medium
 
   * New snapshot
