--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141209+emacs-pretest-24.0.05-13880-gd282d6a-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Tue, 09 Dec 2014 00:19:07 -0800
+
 emacs-snapshot (2:20141207+emacs-pretest-24.0.05-13837-g2b53560-1) unstable; urgency=medium
 
   * New snapshot
