--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141214+emacs-pretest-24.0.05-13952-gf8f7357-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 14 Dec 2014 01:56:39 -0800
+
 emacs-snapshot (2:20141209+emacs-pretest-24.0.05-13880-gd282d6a-1) unstable; urgency=medium
 
   * New snapshot
