--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141215+emacs-pretest-24.0.05-13964-ge2815bf-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Mon, 15 Dec 2014 00:40:35 -0800
+
 emacs-snapshot (2:20141214+emacs-pretest-24.0.05-13952-gf8f7357-1) unstable; urgency=medium
 
   * New snapshot
