--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141221+emacs-pretest-24.0.05-14024-ga8856cb-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 21 Dec 2014 01:55:59 -0800
+
 emacs-snapshot (2:20141215+emacs-pretest-24.0.05-13964-ge2815bf-1) unstable; urgency=medium
 
   * New snapshot
