--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20141228+emacs-pretest-24.0.05-14137-ge092acc-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 28 Dec 2014 01:56:09 -0800
+
 emacs-snapshot (2:20141221+emacs-pretest-24.0.05-14024-ga8856cb-1) unstable; urgency=medium
 
   * New snapshot
