--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150111+emacs-pretest-24.0.05-14274-g9a57bda-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 11 Jan 2015 01:56:10 -0800
+
 emacs-snapshot (2:20141228+emacs-pretest-24.0.05-14137-ge092acc-1) unstable; urgency=medium
 
   * New snapshot
