--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150208+emacs-pretest-24.0.05-15717-gdcec731-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 08 Feb 2015 01:56:08 -0800
+
 emacs-snapshot (2:20150201+emacs-pretest-24.0.05-15626-g9fe732a-1) unstable; urgency=medium
 
   * New snapshot
