--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150222+emacs-pretest-24.0.05-15849-g3f006e1-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 22 Feb 2015 20:44:58 -0800
+
 emacs-snapshot (2:20150215+emacs-pretest-24.0.05-15788-gffec11d-1) unstable; urgency=medium
 
   * New snapshot
