--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150223+emacs-pretest-24.0.05-15856-ged7005c-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Mon, 23 Feb 2015 11:39:48 -0800
+
 emacs-snapshot (2:20150222+emacs-pretest-24.0.05-15849-g3f006e1-1) unstable; urgency=medium
 
   * New snapshot
