--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150224+emacs-pretest-24.0.05-15867-gb86ba30-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Tue, 24 Feb 2015 21:33:28 -0800
+
 emacs-snapshot (2:20150223+emacs-pretest-24.0.05-15856-ged7005c-1) unstable; urgency=medium
 
   * New snapshot
