--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150301+emacs-pretest-24.0.05-15915-g159e9f4-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 01 Mar 2015 03:17:42 -0800
+
 emacs-snapshot (2:20150225+emacs-pretest-24.0.05-15868-g8bb64d2-1) unstable; urgency=medium
 
   * New snapshot
