--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150308+emacs-24.4.90-3993-gbcf89ff-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 08 Mar 2015 01:55:52 -0800
+
 emacs-snapshot (2:20150301+emacs-pretest-24.0.05-15915-g159e9f4-1) unstable; urgency=medium
 
   * New snapshot
