--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150322+emacs-24.4.91-4061-g6e1fac9-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 22 Mar 2015 01:54:27 -0700
+
 emacs-snapshot (2:20150315+emacs-24.4.91-4003-g51e7e46-1) unstable; urgency=medium
 
   * New snapshot
