--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150405+emacs-24.5-rc2-4168-g16eec6f-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 05 Apr 2015 01:54:23 -0700
+
 emacs-snapshot (2:20150329+emacs-24.4.91-4139-ge6127d9-1) unstable; urgency=medium
 
   * New snapshot
