--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150412+emacs-24.5-rc2-4271-g3037971-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 12 Apr 2015 01:56:51 -0700
+
 emacs-snapshot (2:20150405+emacs-24.5-rc2-4168-g16eec6f-1) unstable; urgency=medium
 
   * New snapshot
