--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150419+emacs-24.5-rc2-4380-g65ac8bc-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 19 Apr 2015 01:56:01 -0700
+
 emacs-snapshot (2:20150412+emacs-24.5-rc2-4271-g3037971-1) unstable; urgency=medium
 
   * New snapshot
