--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150503+emacs-24.5-rc2-4541-g08431a2-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 03 May 2015 01:58:23 -0700
+
 emacs-snapshot (2:20150426+emacs-24.5-rc2-4453-gfddff05-1) unstable; urgency=medium
 
   * New snapshot
