--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150510+emacs-24.5-rc2-4636-gd2c7e14-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 10 May 2015 01:57:39 -0700
+
 emacs-snapshot (2:20150503+emacs-24.5-rc2-4541-g08431a2-1) unstable; urgency=medium
 
   * New snapshot
