--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150531+emacs-24.5-rc2-4903-g0700eb1-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 31 May 2015 01:57:51 -0700
+
 emacs-snapshot (2:20150526+emacs-24.5-rc2-4838-gdb87b14-1) unstable; urgency=medium
 
   * New snapshot
