--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150607+emacs-24.5-rc3-fixed-5006-g325bf19-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 07 Jun 2015 01:58:09 -0700
+
 emacs-snapshot (2:20150531+emacs-24.5-rc2-4903-g0700eb1-1) unstable; urgency=medium
 
   * New snapshot
