--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150614+emacs-24.5-rc3-fixed-5071-g86076e6-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 14 Jun 2015 01:57:41 -0700
+
 emacs-snapshot (2:20150607+emacs-24.5-rc3-fixed-5006-g325bf19-1) unstable; urgency=medium
 
   * New snapshot
