--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150712+emacs-24.5-rc3-fixed-5346-g168c80e-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 12 Jul 2015 01:58:16 -0700
+
 emacs-snapshot (2:20150705+emacs-24.5-rc3-fixed-5282-g044d4cc-1) unstable; urgency=medium
 
   * New snapshot
