--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150719+emacs-24.5-rc3-fixed-5382-g83fbe89-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 19 Jul 2015 01:57:41 -0700
+
 emacs-snapshot (2:20150712+emacs-24.5-rc3-fixed-5346-g168c80e-1) unstable; urgency=medium
 
   * New snapshot
