--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150802+emacs-24.5-rc3-fixed-5455-gbd3b426-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 02 Aug 2015 01:57:05 -0700
+
 emacs-snapshot (2:20150726+emacs-24.5-rc3-fixed-5419-g075f8d9-1) unstable; urgency=medium
 
   * New snapshot
