--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150809+emacs-24.5-rc3-fixed-5496-g7e8f7e0-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 09 Aug 2015 01:56:01 -0700
+
 emacs-snapshot (2:20150806+emacs-24.5-rc3-fixed-5480-g0aec2aa-1) unstable; urgency=medium
 
   * New snapshot
