--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150904+emacs-24.5-rc3-fixed-5796-g8a6260e-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Fri, 04 Sep 2015 23:52:08 -0700
+
 emacs-snapshot (2:20150904+emacs-24.5-rc3-fixed-5735-gcc90c25-1) unstable; urgency=medium
 
   * New snapshot
