--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150905+emacs-24.5-rc3-fixed-5812-g88b9a80-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sat, 05 Sep 2015 19:57:45 -0700
+
 emacs-snapshot (2:20150904+emacs-24.5-rc3-fixed-5796-g8a6260e-1) unstable; urgency=medium
 
   * New snapshot
