--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150907+emacs-24.5-rc3-fixed-5828-g6cd64aa-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Mon, 07 Sep 2015 22:02:46 -0700
+
 emacs-snapshot (2:20150906+emacs-24.5-rc3-fixed-5812-g88b9a80-1) unstable; urgency=medium
 
   * New snapshot
