--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150913+emacs-24.5-rc3-fixed-5878-gfc9dc03-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 13 Sep 2015 01:56:29 -0700
+
 emacs-snapshot (2:20150907+emacs-24.5-rc3-fixed-5828-g6cd64aa-1) unstable; urgency=medium
 
   * New snapshot
