--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150920+emacs-24.5-rc3-fixed-5952-g00a65e3-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 20 Sep 2015 01:56:51 -0700
+
 emacs-snapshot (2:20150913+emacs-24.5-rc3-fixed-5878-gfc9dc03-1) unstable; urgency=medium
 
   * New snapshot
