--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20150927+emacs-24.5-rc3-fixed-6027-gf49e3a2-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 27 Sep 2015 01:56:21 -0700
+
 emacs-snapshot (2:20150920+emacs-24.5-rc3-fixed-5952-g00a65e3-1) unstable; urgency=medium
 
   * New snapshot
