--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20151005+emacs-24.5-rc3-fixed-6124-g7e83f50-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Mon, 05 Oct 2015 14:38:28 -0700
+
 emacs-snapshot (2:20151004+emacs-24.5-rc3-fixed-6108-g45d0b3d-1) unstable; urgency=medium
 
   * New snapshot
