--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20151011+emacs-24.5-rc3-fixed-6183-gce402dd-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 11 Oct 2015 01:58:10 -0700
+
 emacs-snapshot (2:20151005+emacs-24.5-rc3-fixed-6124-g7e83f50-1) unstable; urgency=medium
 
   * New snapshot
