--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20151018+emacs-24.5-rc3-fixed-6248-gf8ff393-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 18 Oct 2015 01:58:14 -0700
+
 emacs-snapshot (2:20151011+emacs-24.5-rc3-fixed-6183-gce402dd-1) unstable; urgency=medium
 
   * New snapshot
