--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20151108+emacs-24.5-rc3-fixed-6508-ge133eea-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 08 Nov 2015 16:00:45 -0800
+
 emacs-snapshot (2:20151108+emacs-24.5-rc3-fixed-6493-g8a8613b-1) unstable; urgency=medium
 
   * New snapshot
