--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20151113+emacs-24.5-rc3-fixed-6587-ged2e7e2-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Fri, 13 Nov 2015 22:41:00 -0800
+
 emacs-snapshot (2:20151113+emacs-24.5-rc3-fixed-6582-g31f6e93-1) unstable; urgency=medium
 
   * New snapshot
