--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20151122+emacs-24.5-rc3-fixed-6611-gea78129-1) unstable; urgency=medium
+
+  * New snapshot
+
+ -- Dima Kogan <dima@secretsauce.net>  Sun, 22 Nov 2015 10:21:29 -0800
+
 emacs-snapshot (2:20151115+emacs-24.5-rc3-fixed-6594-gae0653b-1) unstable; urgency=medium
 
   * New snapshot
